
bin_SCRIPTS =       \
    dasdlist


dist_pkgdata_DATA =                     \
    awssl-v19g                          \
    awswrite.jcl                        \
    rawstape.jcl                        \
    scsiboot                            \
    tapeconv.jcl                        \
    TMOUNT.txt                          \
    zzsacard.bin                        \
    cckddump-cckdload/$$README          \
    cckddump-cckdload/$$RECEIV          \
    cckddump-cckdload/A$BZCOMP          \
    cckddump-cckdload/A$ZCOMP           \
    cckddump-cckdload/B$PRLK            \
    cckddump-cckdload/C$ASM             \
    cckddump-cckdload/D$LKED            \
    cckddump-cckdload/dir.txt           \
    cckddump-cckdload/E$DUMP            \
    cckddump-cckdload/E$LOAD            \
    cckddump-cckdload/X$BZC/BLKSRT      \
    cckddump-cckdload/X$BZC/BZLIB       \
    cckddump-cckdload/X$BZC/COMPRESS    \
    cckddump-cckdload/X$BZC/CRCTABLE    \
    cckddump-cckdload/X$BZC/DECOMPR     \
    cckddump-cckdload/X$BZC/HUFFMAN     \
    cckddump-cckdload/X$BZC/LICENSE     \
    cckddump-cckdload/X$BZC/RANDTAB     \
    cckddump-cckdload/X$BZC/README      \
    cckddump-cckdload/X$BZH/BZLIB       \
    cckddump-cckdload/X$BZH/BZLIB@PR    \
    cckddump-cckdload/X$BZH/LICENSE     \
    cckddump-cckdload/X$BZH/README      \
    cckddump-cckdload/X$BZO/BLKSRT      \
    cckddump-cckdload/X$BZO/BZLIB       \
    cckddump-cckdload/X$BZO/COMPRESS    \
    cckddump-cckdload/X$BZO/CRCTABLE    \
    cckddump-cckdload/X$BZO/DECOMPR     \
    cckddump-cckdload/X$BZO/HUFFMAN     \
    cckddump-cckdload/X$BZO/RANDTAB     \
    cckddump-cckdload/X$CCKDA/CCKDDU64  \
    cckddump-cckdload/X$CCKDA/CCKDDUMP  \
    cckddump-cckdload/X$CCKDA/CCKDLOAD  \
    cckddump-cckdload/X$CCKDL/CCKDDU64  \
    cckddump-cckdload/X$CCKDL/CCKDDUMP  \
    cckddump-cckdload/X$CCKDL/CCKDLOAD  \
    cckddump-cckdload/X$CCKDO/CCKDDU64  \
    cckddump-cckdload/X$CCKDO/CCKDDUMP  \
    cckddump-cckdload/X$CCKDO/CCKDLOAD  \
    cckddump-cckdload/X$CCKDO/COMPLIB   \
    cckddump-cckdload/X$ZC/ADLER32      \
    cckddump-cckdload/X$ZC/COMPRESS     \
    cckddump-cckdload/X$ZC/CRC32        \
    cckddump-cckdload/X$ZC/DEFLATE      \
    cckddump-cckdload/X$ZC/EXAMPLE      \
    cckddump-cckdload/X$ZC/GZCLOSE      \
    cckddump-cckdload/X$ZC/GZLIB        \
    cckddump-cckdload/X$ZC/GZREAD       \
    cckddump-cckdload/X$ZC/GZWRITE      \
    cckddump-cckdload/X$ZC/INFBACK      \
    cckddump-cckdload/X$ZC/INFFAST      \
    cckddump-cckdload/X$ZC/INFLATE      \
    cckddump-cckdload/X$ZC/INFTREES     \
    cckddump-cckdload/X$ZC/MINIGZIP     \
    cckddump-cckdload/X$ZC/README       \
    cckddump-cckdload/X$ZC/TREES        \
    cckddump-cckdload/X$ZC/UNCOMPR      \
    cckddump-cckdload/X$ZC/ZUTIL        \
    cckddump-cckdload/X$ZH/CRC32        \
    cckddump-cckdload/X$ZH/DEFLATE      \
    cckddump-cckdload/X$ZH/GZGUTS       \
    cckddump-cckdload/X$ZH/INFFAST      \
    cckddump-cckdload/X$ZH/INFFIXED     \
    cckddump-cckdload/X$ZH/INFLATE      \
    cckddump-cckdload/X$ZH/INFTREES     \
    cckddump-cckdload/X$ZH/TREES        \
    cckddump-cckdload/X$ZH/ZCONF        \
    cckddump-cckdload/X$ZH/ZCONF@IN     \
    cckddump-cckdload/X$ZH/ZLIB         \
    cckddump-cckdload/X$ZH/ZUTIL        \
    cckddump-cckdload/X$ZO/ADLER32      \
    cckddump-cckdload/X$ZO/COMPRESS     \
    cckddump-cckdload/X$ZO/CRC32        \
    cckddump-cckdload/X$ZO/DEFLATE      \
    cckddump-cckdload/X$ZO/EXAMPLE      \
    cckddump-cckdload/X$ZO/GZCLOSE      \
    cckddump-cckdload/X$ZO/GZLIB        \
    cckddump-cckdload/X$ZO/GZREAD       \
    cckddump-cckdload/X$ZO/GZWRITE      \
    cckddump-cckdload/X$ZO/INFBLOCK     \
    cckddump-cckdload/X$ZO/INFCODES     \
    cckddump-cckdload/X$ZO/INFLATE      \
    cckddump-cckdload/X$ZO/INFTREES     \
    cckddump-cckdload/X$ZO/TREES        \
    cckddump-cckdload/X$ZO/UNCOMPR      \
    cckddump-cckdload/X$ZO/ZUTIL


EXTRA_DIST =        \
    bldlvlck        \
    configure.ac    \
    dasdlist.bat    \
    voldsext.cmd    \
    Makefile.am

