
bin_SCRIPTS =       \
    dasdlist


dist_pkgdata_DATA =                     \
    awssl-v19g                          \
    awswrite.jcl                        \
    rawstape.jcl                        \
    scsiboot                            \
    tapeconv.jcl                        \
    TMOUNT.txt                          \
    zzsacard.bin                        \
    cckddump-cckdload.zip


EXTRA_DIST =        \
    bldlvlck        \
    configure.ac    \
    dasdlist.bat    \
    voldsext.cmd    \
    Makefile.am

