
bin_SCRIPTS =       \
    dasdlist


dist_pkgdata_DATA = \
    awssl-v19g      \
    awswrite.jcl    \
    rawstape.jcl    \
    scsiboot        \
    tapeconv.jcl    \
    TMOUNT.txt      \
    CMPSC.txt       \
    zzsacard.bin    \
    CCKD.JCL.Jan2025.XMI.Updated.zip


EXTRA_DIST =        \
    bldlvlck        \
    configure.ac    \
    dasdlist.bat    \
    voldsext.cmd    \
    Makefile.am
